# mongo_history_api_plugin

./: CMakeLists.txt  README.md  mongo_history_api_plugin.cpp
include/eosio/mongo_history_api_plugin/: mongo_history_api_plugin.hpp
